--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^10.11.0",
     "esm": "^3.2.25"
+  },
+  "devDependencies": {
+    "cypress": "^10.11.0"
   }
 }
