--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "esm": "^3.2.25"
   },
   "devDependencies": {
-    "cypress": "^10.11.0"
+    "cypress": "^10.11.0",
+    "cypress-localstorage-commands": "^2.2.2"
   }
 }
